# down-to-the-ship

./: .gitignore  README.md  Results.md  Training.md  chat.py  client.py  dataset.jsonl  pyproject.toml  run-local.py
brev/: plot.py  printing.py  requirements.txt  run.py  tests.txt  train.py
brev/wandb/latest-run/files/: config.yaml  wandb-summary.json
brev/wandb/run-20231218_151221-eo63ve8m/: run-eo63ve8m.wandb
brev/wandb/run-20231218_151221-eo63ve8m/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
brev/wandb/run-20231218_151524-kz8dtdtf/: run-kz8dtdtf.wandb
brev/wandb/run-20231218_151524-kz8dtdtf/files/: wandb-metadata.json
config/: special_tokens_map.json
deploy/: README.md  requirements.txt  run.py
merge/: README.md
research/: README.md  client.py
resolver/: README.md  resolver.py
train/: Notes.md  README.md  plot.py  train.py
trained-config/: config.json  tokenizer_config.json
